added deal of the week section

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 
         </div>
       </nav>
+
+
+
+
     <!-- MANDATORY JS EXERCISES (continue from yesterday's file for this exercise)
     1) Create two inputs for picking up colors in the page, and a button with "Apply Colors" as text
     2) Grab all <li> in the page from the DOM, and save them in a variable called "listItems"
@@ -179,6 +183,44 @@
             <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
         </p>
     </div>
+    </div>
+
+    <div class="container">
+        <h3>Deal of the week! dont miss out</h3>
+        <div class="row">
+            <div class="col-3"> 
+                <div class="card">
+                    <img class="card-img-top" src="https://img.static-af.com/images/meta/IDname/CITY-BCN-1?aspect_ratio=2:1&max_width=1920" alt="Card image cap">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-3"> 
+                <div class="card">
+                    <img class="card-img-top" src="https://img.static-af.com/images/meta/IDname/CITY-BCN-1?aspect_ratio=2:1&max_width=1920" alt="Card image cap">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3"> 
+                <div class="card">
+                    <img class="card-img-top" src="https://img.static-af.com/images/meta/IDname/CITY-BCN-1?aspect_ratio=2:1&max_width=1920" alt="Card image cap">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3"> 
+                <div class="card">
+                    <img class="card-img-top" src="https://img.static-af.com/images/meta/IDname/CITY-BCN-1?aspect_ratio=2:1&max_width=1920" alt="Card image cap">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
