--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <div class="container">
         <h3>Deal of the week! dont miss out</h3>
         <div class="row">
-            <div class="col-3"> 
+            <div class="col-6 col-md-4 col-lg-3 mb-sm-2"> 
                 <div class="card">
                     <img class="card-img-top" src="https://img.static-af.com/images/meta/IDname/CITY-BCN-1?aspect_ratio=2:1&max_width=1920" alt="Card image cap">
                     <div class="card-body">
@@ -196,7 +196,7 @@
                     </div>
                   </div>
             </div>
-            <div class="col-3"> 
+            <div class="col-6 col-md-4 col-lg-3 mb-sm-2"> 
                 <div class="card">
                     <img class="card-img-top" src="https://img.static-af.com/images/meta/IDname/CITY-BCN-1?aspect_ratio=2:1&max_width=1920" alt="Card image cap">
                     <div class="card-body">
@@ -204,7 +204,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-3"> 
+            <div class="col-6 col-md-4 col-lg-3 mb-sm-2"> 
                 <div class="card">
                     <img class="card-img-top" src="https://img.static-af.com/images/meta/IDname/CITY-BCN-1?aspect_ratio=2:1&max_width=1920" alt="Card image cap">
                     <div class="card-body">
@@ -212,7 +212,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-3"> 
+            <div class="col-6 col-md-4 col-lg-3 mb-sm-2"> 
                 <div class="card">
                     <img class="card-img-top" src="https://img.static-af.com/images/meta/IDname/CITY-BCN-1?aspect_ratio=2:1&max_width=1920" alt="Card image cap">
                     <div class="card-body">
