--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         </div>
         <h3>Welcome Summer!</h3>
         <div class="row">
-                <div class="col-sm-6 col-md-4 col-lg-2 mb-2">
+                <div class="col-6 col-md-4 col-lg-2 mb-2">
                 <div class="card">
                     <img class="card-img-top" src="https://img.static-af.com/images/meta/IDname/CITY-BCN-1?aspect_ratio=2:1&max_width=1920" alt="Card image cap">
                     <div class="card-body">
@@ -239,7 +239,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-4 col-lg-2 mb-2">
+            <div class="col-6 col-md-4 col-lg-2 mb-2">
                 <div class="card">
                     <img class="card-img-top" src="https://img.static-af.com/images/meta/IDname/CITY-BCN-1?aspect_ratio=2:1&max_width=1920" alt="Card image cap">
                     <div class="card-body">
@@ -247,7 +247,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-4 col-lg-2 mb-2">
+            <div class="col-6 col-md-4 col-lg-2 mb-2">
                 <div class="card">
                     <img class="card-img-top" src="https://img.static-af.com/images/meta/IDname/CITY-BCN-1?aspect_ratio=2:1&max_width=1920" alt="Card image cap">
                     <div class="card-body">
@@ -255,7 +255,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-4 col-lg-2 mb-2">
+            <div class="col-6 col-md-4 col-lg-2 mb-2">
                 <div class="card">
                     <img class="card-img-top" src="https://img.static-af.com/images/meta/IDname/CITY-BCN-1?aspect_ratio=2:1&max_width=1920" alt="Card image cap">
                     <div class="card-body">
@@ -263,7 +263,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-4 col-lg-2 mb-2">
+            <div class="col-6 col-md-4 col-lg-2 mb-2">
                 <div class="card">
                     <img class="card-img-top" src="https://img.static-af.com/images/meta/IDname/CITY-BCN-1?aspect_ratio=2:1&max_width=1920" alt="Card image cap">
                     <div class="card-body">
@@ -271,7 +271,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-4 col-lg-2 mb-2">
+            <div class="col-6 col-md-4 col-lg-2 mb-2">
                 <div class="card">
                     <img class="card-img-top" src="https://img.static-af.com/images/meta/IDname/CITY-BCN-1?aspect_ratio=2:1&max_width=1920" alt="Card image cap">
                     <div class="card-body">
@@ -280,7 +280,7 @@
                 </div>
             </div>
         </div>
-       </div>
+    </div> <!-- container -->
 
 </body>
 </html>
