--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
         </div>
         <h3>Welcome Summer!</h3>
-        <div class="row">
+        <div class="row shadow p-3 mb-5 bg-white rounded">
                 <div class="col-6 col-md-4 col-lg-2 mb-2">
                 <div class="card">
                     <img class="card-img-top" src="https://img.static-af.com/images/meta/IDname/CITY-BCN-1?aspect_ratio=2:1&max_width=1920" alt="Card image cap">
